--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -92,23 +92,27 @@
         android:id="@+id/button"
         android:layout_row="5"
         android:layout_column="0"
+        android:onClick="launchLogo"
         android:text="@string/logo" />
 
     <Button
         android:id="@+id/button1"
         android:layout_row="5"
         android:layout_column="1"
+        android:onClick="launchMain"
         android:text="@string/bmi" />
 
     <Button
         android:id="@+id/button2"
         android:layout_row="5"
         android:layout_column="2"
+        android:onClick="launchCalories"
         android:text="@string/calories" />
 
     <Button
         android:id="@+id/button3"
         android:layout_row="5"
         android:layout_column="3"
+        android:onClick="launchRecipes"
         android:text="@string/recipes" />
 </GridLayout>
