--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity"
-    android:columnCount="4"
+    android:columnCount="2"
     android:useDefaultMargins="true">
 
     <EditText
@@ -17,12 +17,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_column="0"
-        android:layout_columnSpan="4"
+        android:layout_columnSpan="2"
         android:digits="0123456789"
         android:ems="10"
         android:inputType="number"
         android:maxLength="6"
         android:minHeight="48dp" />
+
+    <!-- <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/tip_percentage"
+        android:id="@+id/percentTextView"
+        android:layout_gravity="center_vertical|right"/>
+
+    <SeekBar
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/seekbar_height"
+        android:id="@+id/percentSeekBar"
+        android:indeterminate="false"
+        android:max="30"
+        android:progress="15"
+        android:layout_gravity="fill_horizontal"/> -->
 
     <TextView
         android:id="@+id/weightTextView"
@@ -30,7 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_row="0"
         android:layout_column="0"
-        android:layout_columnSpan="4"
+        android:layout_columnSpan="2"
         android:layout_gravity="fill_horizontal"
         android:background="@color/amount_background"
         android:elevation="@dimen/elevation"
@@ -44,7 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_row="1"
         android:layout_column="0"
-        android:layout_columnSpan="4"
+        android:layout_columnSpan="2"
         android:digits="0123456789"
         android:ems="10"
         android:inputType="number"
@@ -56,7 +73,7 @@
         android:layout_height="wrap_content"
         android:layout_row="1"
         android:layout_column="0"
-        android:layout_columnSpan="4"
+        android:layout_columnSpan="2"
         android:layout_gravity="fill_horizontal"
         android:background="@color/amount_background"
         android:elevation="@dimen/elevation"
@@ -80,7 +97,6 @@
         android:layout_height="wrap_content"
         android:layout_row="2"
         android:layout_column="1"
-        android:layout_columnSpan="3"
         android:layout_gravity="fill_horizontal"
         android:background="@color/result_background"
         android:elevation="@dimen/elevation"
@@ -88,31 +104,4 @@
         android:padding="@dimen/textview_padding"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_row="5"
-        android:layout_column="0"
-        android:onClick="launchLogo"
-        android:text="@string/logo" />
-
-    <Button
-        android:id="@+id/button1"
-        android:layout_row="5"
-        android:layout_column="1"
-        android:onClick="launchMain"
-        android:text="@string/bmi" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_row="5"
-        android:layout_column="2"
-        android:onClick="launchCalories"
-        android:text="@string/calories" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_row="5"
-        android:layout_column="3"
-        android:onClick="launchRecipes"
-        android:text="@string/recipes" />
 </GridLayout>
