--- a/app/src/main/res/layout/fragment_bmi.xml
+++ b/app/src/main/res/layout/fragment_bmi.xml
@@ -90,25 +90,25 @@
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/logoButton"
         android:layout_row="4"
         android:layout_column="0"
         android:text="@string/logo" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/bmiButton"
         android:layout_row="4"
         android:layout_column="1"
         android:text="@string/bmi" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/caloriesButton"
         android:layout_row="4"
         android:layout_column="2"
         android:text="@string/calories" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/recipesButton"
         android:layout_row="4"
         android:layout_column="3"
         android:text="@string/recipes" />
