--- a/app/src/main/res/layout/fragment_logo.xml
+++ b/app/src/main/res/layout/fragment_logo.xml
@@ -14,28 +14,28 @@
     android:useDefaultMargins="true">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/logoButton"
         android:layout_row="5"
         android:layout_column="0"
         android:onClick="launchLogo"
         android:text="@string/logo" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/bmiButton"
         android:layout_row="5"
         android:layout_column="1"
         android:onClick="launchMain"
         android:text="@string/bmi" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/caloriesButton"
         android:layout_row="5"
         android:layout_column="2"
         android:onClick="launchCalories"
         android:text="@string/calories" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/recipesButton"
         android:layout_row="5"
         android:layout_column="3"
         android:onClick="launchRecipes"
