--- a/app/src/main/res/layout/fragment_bmi.xml
+++ b/app/src/main/res/layout/fragment_bmi.xml
@@ -99,7 +99,8 @@
         android:id="@+id/bmiButton"
         android:layout_row="4"
         android:layout_column="1"
-        android:text="@string/bmi" />
+        android:text="@string/bmi"
+        android:clickable = "false" />
 
     <Button
         android:id="@+id/caloriesButton"
