--- a/app/src/main/res/layout/fragment_calories.xml
+++ b/app/src/main/res/layout/fragment_calories.xml
@@ -133,7 +133,8 @@
         android:layout_row="5"
         android:layout_column="2"
         android:onClick="launchCalories"
-        android:text="@string/calories" />
+        android:text="@string/calories"
+        android:clickable = "false" />
 
     <Button
         android:id="@+id/button3"
