--- a/app/src/main/res/layout/fragment_logo.xml
+++ b/app/src/main/res/layout/fragment_logo.xml
@@ -18,7 +18,8 @@
         android:layout_row="5"
         android:layout_column="0"
         android:onClick="launchLogo"
-        android:text="@string/logo" />
+        android:text="@string/logo"
+        android:clickable = "false" />
 
     <Button
         android:id="@+id/bmiButton"
@@ -45,7 +46,7 @@
         android:id="@+id/imageView"
         android:layout_width="182dp"
         android:layout_height="157dp"
-        android:layout_row="2"
+        android:layout_row="1"
         android:layout_column="1"
         android:layout_columnSpan="2"
         tools:srcCompat="@tools:sample/avatars" />
