--- a/app/src/main/res/layout/fragment_recipes.xml
+++ b/app/src/main/res/layout/fragment_recipes.xml
@@ -36,7 +36,8 @@
         android:id="@+id/button3"
         android:layout_row="5"
         android:layout_column="3"
-        android:text="@string/recipes" />
+        android:text="@string/recipes"
+        android:clickable = "false" />
 
     <TextView
         android:id="@+id/textView"
