--- a/app/src/main/res/layout/fragment_bmi.xml
+++ b/app/src/main/res/layout/fragment_bmi.xml
@@ -93,7 +93,7 @@
         android:id="@+id/logoButton"
         android:layout_row="4"
         android:layout_column="0"
-        android:text="@string/logo" />
+        android:text="@string/home" />
 
     <Button
         android:id="@+id/bmiButton"
