--- a/app/src/main/res/layout/fragment_calories.xml
+++ b/app/src/main/res/layout/fragment_calories.xml
@@ -118,8 +118,8 @@
         android:id="@+id/button"
         android:layout_row="5"
         android:layout_column="0"
-        android:onClick="launchLogo"
-        android:text="@string/logo" />
+        android:onClick="launchHome"
+        android:text="@string/home" />
 
     <Button
         android:id="@+id/button1"
