--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".LogoFragment"
+    tools:context=".HomeFragment"
     android:columnCount="4"
     android:useDefaultMargins="true">
 
@@ -17,8 +17,8 @@
         android:id="@+id/logoButton"
         android:layout_row="5"
         android:layout_column="0"
-        android:onClick="launchLogo"
-        android:text="@string/logo"
+        android:onClick="launchHome"
+        android:text="@string/home"
         android:clickable = "false" />
 
     <Button
