--- a/app/src/main/res/layout/fragment_recipes.xml
+++ b/app/src/main/res/layout/fragment_recipes.xml
@@ -17,7 +17,7 @@
         android:id="@+id/button"
         android:layout_row="5"
         android:layout_column="0"
-        android:text="@string/logo" />
+        android:text="@string/home" />
 
     <Button
         android:id="@+id/button1"
