--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,44 +10,15 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".HomeFragment"
-    android:columnCount="4"
     android:useDefaultMargins="true">
 
-    <Button
-        android:id="@+id/logoButton"
-        android:layout_row="5"
-        android:layout_column="0"
-        android:onClick="launchHome"
-        android:text="@string/home"
-        android:clickable = "false" />
-
-    <Button
-        android:id="@+id/bmiButton"
-        android:layout_row="5"
-        android:layout_column="1"
-        android:onClick="launchMain"
-        android:text="@string/bmi" />
-
-    <Button
-        android:id="@+id/caloriesButton"
-        android:layout_row="5"
-        android:layout_column="2"
-        android:onClick="launchCalories"
-        android:text="@string/calories" />
-
-    <Button
-        android:id="@+id/recipesButton"
-        android:layout_row="5"
-        android:layout_column="3"
-        android:onClick="launchRecipes"
-        android:text="@string/recipes" />
-
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="182dp"
-        android:layout_height="157dp"
-        android:layout_row="1"
-        android:layout_column="1"
-        android:layout_columnSpan="2"
-        tools:srcCompat="@tools:sample/avatars" />
-</GridLayout>
+        android:id="@+id/imageView2"
+        android:layout_width="383dp"
+        android:layout_height="370dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/bmi_calculator_logo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
