--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -1,14 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".QuizFragment">
+    tools:context=".QuizFragment"
+    android:orientation="vertical"
+    android:gravity="center"
+    tools:ignore="UsingOnClickInXml">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/countLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/count_label"
+        android:textSize="22sp" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/questionLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/question_label"
+        android:textSize="24sp"
+        android:layout_marginTop="60dp" />
+
+    <Button
+        android:id="@+id/answerBtn1"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
+        android:text="@string/btn_answer"
+        android:layout_marginTop="80dp"
+        style="?attr/materialButtonOutlinedStyle"
+        android:onClick="checkAnswer" />
+
+    <Button
+        android:id="@+id/answerBtn2"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
+        android:text="@string/btn_answer"
+        android:layout_marginTop="6dp"
+        style="?attr/materialButtonOutlinedStyle"
+        android:onClick="checkAnswer" />
+
+    <Button
+        android:id="@+id/answerBtn3"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
+        android:text="@string/btn_answer"
+        android:layout_marginTop="6dp"
+        style="?attr/materialButtonOutlinedStyle"
+        android:onClick="checkAnswer" />
+
+    <Button
+        android:id="@+id/answerBtn4"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
+        android:text="@string/btn_answer"
+        android:layout_marginTop="6dp"
+        style="?attr/materialButtonOutlinedStyle"
+        android:onClick="checkAnswer" />
+
+</LinearLayout>
